<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/name_text_view"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/name_text_view" />

        <EditText
            android:id="@+id/name_text_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/phone_text_view"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/phone_text_view" />

        <EditText
            android:id="@+id/phone_text_input"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="phone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/add_contact_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/add_contact_button" />

        <Button
            android:id="@+id/show_contacts_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/show_contacts_button"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginLeft="55dp">

        <Button
            android:id="@+id/delete_contacts_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/delete_contacts_button"/>

    </LinearLayout>



</LinearLayout>